tdf#131146 Linked Calc: changes are lost in last edited cell

Change-Id: I768ccc1d98a0785806986a6ffc70de057991e08a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90009
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit a91e19e30833c2743c1c2ce010a2d0f06aad7706)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90039